- Refactoring Orrery system to take snapshots to roll back to